--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "dev:full": "concurrently \"npm run dev\" \"npm run client\""
   },
   "dependencies": {
+    "@minka/ledger-sdk": "^2.15.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "envalid": "^8.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
