--- a/src/package.json
+++ b/src/package.json
@@ -4,26 +4,26 @@
   "description": "Aplicación para crear intents",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "ts-node src/server.ts",
     "build": "tsc",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\"",
-    "client": "cd client && npm start",
-    "server": "nodemon dist/server.js",
-    "dev:full": "concurrently \"npm run dev\" \"npm run client\""
+    "dev": "nodemon --exec ts-node server.ts",
+    "watch": "tsc --watch",
+    "server": "nodemon dist/server.js"
   },
   "dependencies": {
     "@minka/ledger-sdk": "^2.15.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.12",
     "concurrently": "^7.0.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.22",
     "typescript": "^4.5.4"
   }
 }
