--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.17.1",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "jose": "4.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
