--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "@types/node": "^16.11.12",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.5.4"
   },
